--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blogmail-react",
+  "name": "@blogmail/react",
   "version": "1.0.2",
   "description": "blogmail react component",
   "main": "build/index.js",
